--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -18,3 +18,22 @@ dev = [
     "mypy>=1.18.2",
     "ruff>=0.14.4",
 ]
+
+[tool.mypy]
+python_version = "3.12"
+strict = true
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+
+[tool.ruff]
+target-version = "py312"
+line-length = 120
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "N", "W"]
+ignore = ["E501"]  # Line too long - allow longer lines for readability
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
