--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -21,10 +21,10 @@ dev = [
 
 [tool.mypy]
 python_version = "3.12"
-strict = true
-warn_return_any = true
+strict = false
+warn_return_any = false
 warn_unused_configs = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
 
 [tool.ruff]
 target-version = "py312"
